Ajout qrcode + génération pdf + choix nb place dans sale.html

--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,11 @@
     <script src="scripts/agency.min.js"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+         <script src="scripts/pdfkit.js"></script>
+         <script src="scripts/jquery-qrcode-0.14.0/jquery-qrcode-0.14.0.js"></script>
+         <script type="text/javascript" src="scripts/jquery.qrcode.min.js"></script>
+         <script type="text/javascript" src="scripts/qrcode.js"></script>
+         <script src="scripts/blob-stream.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/billetterie.js"></script>
