add login template and date filter

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
           </ul>
           <div class="collapse nav navbar-nav nav-collapse slide-down" style="padding-top:8px;" id="menu">
             <a class="btn btn-default btn-outline btn-circle collapsed"  ng-href="http://localhost:8000/login" >UTC / Escom</a>
-            <a class="btn btn-default btn-outline btn-circle collapsed"  ng-href="" >Extérieur</a>
+            <a class="btn btn-default btn-outline btn-circle collapsed"  ng-href="#!/login" >Extérieur</a>
           </div>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
@@ -108,6 +108,7 @@
          <script src="scripts/blob-stream.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/billetterie.js"></script>
         <script src="scripts/controllers/add_sale.js"></script>
         <script src="scripts/controllers/mon_compte.js"></script>
