--- a/Angular5/src/index.html
+++ b/Angular5/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Wooly</title>
+	<title>Woolly</title>
 	<base href="/">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,44 @@
 </head>
 
 <body>
+	<nav class="navbar navbar-default" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Woolly</a>
+			</div>
+
+			<div class="collapse navbar-collapse" id="navbar-collapse-2">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">Accueil</a></li>
+					<li><a href="#!/billetterie">Liste des ventes</a></li>
+					<li><a href="#!/mon_compte">Mon compte</a></li>
+					<li><a ng-show="1==1" href="#!/admin">Administrateur</a></li>
+					<li>
+						<a class="btn btn-default btn-outline btn-circle collapsed"  data-toggle="collapse" href="#menu" aria-expanded="false" aria-controls="nav-collapse2" >Se connecter</a>
+					</li>
+				</ul>
+				<div class="collapse nav navbar-nav nav-collapse slide-down" style="padding-top:8px;" id="menu">
+					<a class="btn btn-default btn-outline btn-circle collapsed"  ng-href="http://localhost:8000/login" >UTC / Escom</a>
+					<a class="btn btn-default btn-outline btn-circle collapsed"  ng-href="#!/login" >Extérieur</a>
+				</div>
+			</div>
+		</div>
+	</nav>
+
 	<app-root></app-root>
+
+	<!-- Footer -->
+	<div class="footer">
+		<div class="container">
+			<p>Made with <span class="glyphicon glyphicon-heart"></span> by SiMDE. <a href="#!/about">Contacter</a></p>
+		</div>
+	</div>
 </body>
 
 </html>
