--- a/Angular5/src/index.html
+++ b/Angular5/src/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<title>Woolly</title>
@@ -10,7 +10,9 @@
 	<!-- SEO -->
 </head>
 <body>
-	<app-root>Loading...</app-root>
+	<app-root>
+		<span class="d-block text-center display-4">Loading...</span>
+	</app-root>
 </body>
 
 </html>
