--- a/Angular5/src/index.html
+++ b/Angular5/src/index.html
@@ -11,7 +11,15 @@
 </head>
 <body>
 	<app-root>
-		<span class="d-block text-center display-4">Loading...</span>
+		<div style="height: 100%; width: 100%; position: absolute; top: 0; 
+				display: flex; align-items: center; justify-content: center; flex-direction: column;">
+			<p class="mb-5 text-center display-4">Loading...</p>
+			<div class="three-balls-loader">
+				<span class="ball ball-1"></span>
+				<span class="ball ball-2"></span>
+				<span class="ball ball-3"></span>
+			</div>
+		</div>
 	</app-root>
 </body>
 
